@@ -1,4 +1,5 @@
 javac -d ..\bin\directory.pt.isec ^
+  -cp "..\lib\jansi-2.4.0.jar" ^
   ..\pt\isec\directory\*.java ^
   ..\pt\isec\directory\threads\*.java ^
   ..\pt\isec\directory\core\*.java ^
@@ -8,6 +9,8 @@ javac -d ..\bin\directory.pt.isec ^
 
 pause
 
-java -cp "..\bin\directory.pt.isec" pt.isec.directory.MainDirectory 9999 1024 3 17000
+java --enable-native-access=ALL-UNNAMED ^
+ -cp "..\bin\directory.pt.isec;..\lib\jansi-2.4.0.jar" ^
+ pt.isec.directory.MainDirectory 9999 1024 3 17000
 
 pause
